Fix font sizes and wrapping for mobile

--- a/theme/scss/custom.scss
+++ b/theme/scss/custom.scss
@@ -214,15 +214,15 @@ header {
         margin-left: -0.35em;
         margin-bottom: -0.1em;
 
-        font-size: 3rem;
+        font-size: 2.2rem;
         @include media-breakpoint-only(sm) {
-            font-size: 3.2rem;
+            font-size: 2.6rem;
         }
         @include media-breakpoint-only(md) {
-            font-size: 3.6rem;
+            font-size: 3.4rem;
         }
         @include media-breakpoint-up(lg) {
-            font-size: 4rem;
+            font-size: 3.8rem;
         }
 
         transform: rotateZ(3deg);
@@ -237,6 +237,10 @@ header {
     }
 
     .lead {
+        font-size: ($font-size-base * 1.1);
+        @include media-breakpoint-up(sm) {
+            font-size: ($font-size-base * 1.25);
+        }
         @include media-breakpoint-up(md) {
             font-size: ($font-size-base * 1.5);
         }
@@ -356,7 +360,8 @@ section {
         margin-left: -0.35em;
     }
 
-    white-space: nowrap;
+    white-space: pre-wrap;
+    line-height: 1.55;
     font-size: $h2-font-size;
     @include media-breakpoint-up(md) {
         font-size: ($h2-font-size * 1.25);
@@ -375,8 +380,11 @@ section {
 
     span {
         color: $white;
-        background: $primary url(../images/stripe_blue.png) repeat;
+        background-color: $primary;
         padding: 0.15em 0.35em;
+
+        -webkit-box-decoration-break: clone;
+        box-decoration-break: clone;
     }
 }
 
@@ -568,7 +576,10 @@ $card-border-radius: 0;
 
     .stat-counter {
         font-weight: 600;
-        font-size: $font-size-h2;
+        font-size: ($font-size-base * 1.6);
+        @include media-breakpoint-up(sm) {
+            font-size: ($font-size-base * 2);
+        }
     }
     .stat-description {
         font-size: ($font-size-base * 0.9);
